# hash-gen

./: .editorconfig  Cargo.toml  LICENSE  README.md  clippy.toml  rust-toolchain.toml
.github/workflows/: release.yml  rust.yml
src/: config.rs  hasher.rs  main.rs
